<resources>
    <string name="app_name">Futsal Customer Information System</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_dashboard">AdminDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="total_numbers_of_staff">Total numbers of staff:</string>
    <string name="total_numbers_of_customer">Total numbers of customer:</string>
    <string name="total_earning_for_today">Total Earning for today:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="system_name">Futsal System</string>
    <string name="system_email">futsalsystem@gmail.com</string>
    <string name="cover_admin_home">Cover</string>
    <string name="_0">0</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="new_member_click_here">New member?</string>
    <string name="register_here">register here</string>
    <string name="list_of_customers">List Of Customers</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="register">Register</string>
    <string name="futsal_name">Futsal Name</string>
    <string name="opening_time">Opening Time</string>
    <string name="closing_time">Closing Time</string>
    <string name="price_hr">Price/hr</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="mode">Light Mode</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="total_earning">Earning</string>
    <string name="setting">Setting</string>
    <string name="title_activity_user_dashboard">UserDashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_user">Map</string>
</resources>
