<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".registration.UserRegistration">

        <TextView
            android:id="@+id/tvRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgBtnUpload"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_add_a_photo_24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userRegUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserRegUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="20dp"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="30dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userRegAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserRegAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_my_location_black_24dp"
                android:drawablePadding="20dp"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="30dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserRegEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="20dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="30dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userRegPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/etUserRegPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_smartphone_black_24dp"
                android:drawablePadding="20dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="30dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/etUserRegPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="30dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userRegCPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/etUserRegCPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="20dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="30dp"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rgRegUserGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="30dp">

            <RadioButton
                android:id="@+id/rbRegUserMale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbRegFemale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/rbRegOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/others" />

        </RadioGroup>

        <Button
            android:id="@+id/btnUserRegister"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnround"
            android:text="@string/register"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>